# Resurgence

./: .gitignore  Dockerfile  MODEL.md  README.md  docker-compose.yml  pyproject.toml
benchmarks/: results.json  results.md
notebooks/: resurgence_case_study.ipynb
resurgence_core/: Cargo.toml
resurgence_core/src/: lib.rs
resurgence_py/: __init__.py  auditor.py  benchmark.py  db.py  engine.py  flow.py  inquisitor.py  logging_config.py  main.py  models.py  visualization.py
tests/: test_auditor.py  test_auditor_rules.py  test_db.py  test_engine.py  test_models.py  test_validation.py  test_visualization.py
validation/: __init__.py  backtest.py  tests.py
